--- a/blogs.html
+++ b/blogs.html
@@ -26,21 +26,18 @@
     </nav>
     <section class="section">
         <div class="container container-center">
-            <h1>Against-authenticity</h1>
-            <p>That we should not lie is generally sound advice, though few of us are able to navigate life without uttering or affirming the occasional falsehood. However, some—generally those of a romantic temperament—also strive to apply this counsel
-                to the self. They argue that authenticity is one of humankind’s chief virtues and that betraying it is immoral and tragic—immoral, because it requires a person to lie about their underlying being; tragic, because it smothers the unique
-                self beneath a dull blanket of conformity.</p>
+            <h1>dummy blog one</h1>
+            <p>The most well-known dummy text is the 'Lorem Ipsum', which is said to have originated in the 16th century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to 'proper' Latin. It contains a series of real Latin
+                words.</p>
             <a href="/blog1.html" class="link link-primary">Read more</a>
         </div>
     </section>
     <section class="section">
         <div class="container container-center">
-            <h1>Liberals, Radicals, and the Making of a Literary Masterpiece</h1>
-            <p>newly minted university graduate heads home after a long absence, to the delight and trepidation of his widowed father, who waits for hours at the station. At last, the son arrives, handsome and grown-up. The father is thrilled. But the son
-                has brought with him a friend, a tall, brusque, fierce-looking young man. This friend is clearly the senior one in the relationship, and the two have returned from the university with all sorts of notions. They are “nihilists,” they tell
-                the father. Their creed is to subject everything to withering scrutiny and critique. Things soon grow tense at the father’s house. At dinner and tea, where they are joined by the father’s well-dressed, old-fashioned brother, heated arguments
-                break out. To make matters worse, the father’s estate is not flourishing. The peasants don’t like his new progressive management system. He was hoping his son would take an interest. Now he is not sure that he will.</p>
-            <a href="/blog2.html" class="link link-primary">Read more</a>
+            <h1>second dummy blog</h1>
+            <p>Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with
+                'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.</p>
+            <a href="/blog1.html" class="link link-primary">Read more</a>
         </div>
     </section>
     <footer class="footer">
@@ -48,8 +45,8 @@
             social media
         </div>
         <ul class="nav-pill">
-            <li class="list-item-inline"><a class="link" href="/">GitHub</a></li>
-            <li class="list-item-inline"><a class="link" href="/">Linkedin</a></li>
+            <li class="list-item-inline"><a class="link" href="https://github.com/anank0805kr">GitHub</a></li>
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/anand-kumar-97145820a/">Linkedin</a></li>
             <li class="list-item-inline"><a class="link" href="/">Twitter</a></li>
         </ul>
     </footer>
