--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
         <div class="container container-center">
             <h1>minionese</h1>
             <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
-            <a href="adarshbalika.netlify.app" class="link link-primary">Live Project</a>
+            <a href="https://bananatalk-speak.netlify.app/" class="link link-primary">Live Project</a>
             <a href="https://github.com/anank0805kr/Banana-talk" class="link link-secondary">Source code</a>
         </div>
     </section>
