--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,14 @@
                 </span>
         </h1>
     </header>
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>yoda speak</h1>
+            <p>Convert from English to Yoda speak. Yoda often orders sentences as Object-Subject-Verb, split verbs, switches entire phrases and sometimes uses sentences that are different from his normal syntax!</p>
+            <a href="https://english-to-yoda-speak.netlify.app/" class="link link-primary">Live Project</a>
+            <a href="https://github.com/anank0805kr/Yoda_speak" class="link link-secondary">Source code</a>
+        </div>
+    </section>
     <section class="section">
         <div class="container container-center">
             <h1>minionese</h1>
