--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,15 @@
                 </span>
         </h1>
     </header>
+    <section class="section">
+        <div class="container container-center">
+            <h1>
+                <Emoji_interpreter/h1>
+                    <p>This is emoji interpreter app where we can easily find emoji </p>
+                    <a href="https://8uufsk.csb.app/" class="link link-primary">Live Project</a>
+                    <a href="https://github.com/anank0805kr/Emoji_interpreter" class="link link-secondary">Source code</a>
+        </div>
+    </section>
     <section class="section ow">
         <div class="container container-center">
             <h1>yoda speak</h1>
