--- a/projects.html
+++ b/projects.html
@@ -26,13 +26,20 @@
         </ul>
     </nav>
     <header class="hero">
-        <!-- <img src="images/image2.svg" alt="" class="hero-img"> -->
         <h1 class="hero-heading">See
             <span class="hero-inventer">
                    Project code
                 </span>
         </h1>
     </header>
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>yoda speak</h1>
+            <p>Convert from English to Yoda speak. Yoda often orders sentences as Object-Subject-Verb, split verbs, switches entire phrases and sometimes uses sentences that are different from his normal syntax!</p>
+            <a href="https://cash-register-m-anager.netlify.app/" class="link link-primary">Live Project</a>
+            <a href="https://github.com/anank0805kr/cash-register-manager" class="link link-secondary">Source code</a>
+        </div>
+    </section>
     <section class="section">
         <div class="container container-center">
             <h1>Emoji_interpreter</h1>
