--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,8 @@
     </header>
     <section class="section ow">
         <div class="container container-center">
-            <h1>yoda speak</h1>
-            <p>Convert from English to Yoda speak. Yoda often orders sentences as Object-Subject-Verb, split verbs, switches entire phrases and sometimes uses sentences that are different from his normal syntax!</p>
+            <h1>Cash Register Manager</h1>
+            <p>A cash register manager which helps the user by telling how can he/she return the change to the customer with minimum number of notes.</p>
             <a href="https://cash-register-m-anager.netlify.app/" class="link link-primary">Live Project</a>
             <a href="https://github.com/anank0805kr/cash-register-manager" class="link link-secondary">Source code</a>
         </div>
