--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,14 @@
                 </span>
         </h1>
     </header>
+    <section class="section">
+        <div class="container container-center">
+            <h1>MyGood_books</h1>
+            <p>Do you read books? You would find some good recommendations for all the genre. Made using ReactJS with love</p>
+            <a href="https://csb-z6rtu3.netlify.app/" class="link link-primary">Live Project</a>
+            <a href="https://github.com/anank0805kr/gookbooks" class="link link-secondary">Source code</a>
+        </div>
+    </section>
     <section class="section ow">
         <div class="container container-center">
             <h1>Cash Register Manager</h1>
