--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,14 @@
                 </span>
         </h1>
     </header>
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>is-your-birthday-lucky</h1>
+            <p>A website to tell is your birthday lucky</p>
+            <a href="https://is-your-birthday-a-luckyone.netlify.app/" class="link link-primary">Live Project</a>
+            <a href="https://github.com/anank0805kr/is-your-birthday-lucky" class="link link-secondary">Source code</a>
+        </div>
+    </section>
     <section class="section">
         <div class="container container-center">
             <h1>MyGood_books</h1>
