--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,14 @@
                 </span>
         </h1>
     </header>
+    <section class="section">
+        <div class="container container-center">
+            <h1>Learn Triangle</h1>
+            <p>In this site, you can check you triangle knowlegde </p>
+            <a href="https://learn-triangle-s.netlify.app/" class="link link-primary">Live Project</a>
+            <a href="https://github.com/anank0805kr/learn-triangles" class="link link-secondary">Source code</a>
+        </div>
+    </section>
     <section class="section ow">
         <div class="container container-center">
             <h1>is-your-birthday-lucky</h1>
