--- a/blogs.html
+++ b/blogs.html
@@ -28,10 +28,11 @@
         <div class="container container-center">
             <h1>dummy blog one</h1>
             <p>The most well-known dummy text is the 'Lorem Ipsum', which is said to have originated in the 16th century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to 'proper' Latin. It contains a series of real Latin
-                words.</p>
+                words.
+            </p>
             <a href="/blog1.html" class="link link-primary">Read more</a>
-        </div>
     </section>
+    </div>
     <section class="section">
         <div class="container container-center">
             <h1>second dummy blog</h1>
