--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
     </nav>
     <header class="hero">
         <img src="images/image2.svg" alt="" class="hero-img">
-        <h1 class="hero-heading">Anand ,
-            <span class="hero-inventer">
-                   Web Developer
-                </span>
-        </h1>
+        <p class="hero-heading">My name is<span class="hero-inventer"> Anand kumar</span>. I am an Undergrad in Computer Application Student at Patliputra University. Being a computer enthusiast, I keep finding ways to contribute to the computer field. I have solved more then
+            250+ problem on differen platform like Leetcode, GeekforGeek etc.
+
+        </p>
     </header>
     <section class="section ow">
         <div class="container container-center">
@@ -41,7 +40,7 @@
     <section class="section">
         <div class="container container-center">
             <h1>Projects</h1>
-            <p>I like to showcase my work and thus, you can see my projects hosted online</p>
+            <p>I love to make projects and here you can see my projects</p>
             <a href="/projects.html" class="link link-primary">Projects</a>
         </div>
     </section>
@@ -60,6 +59,7 @@
             <li class="list-item-inline"><a class="link" href="https://github.com/anank0805kr">GitHub</a></li>
             <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/anand-kumar-97145820a/">Linkedin</a></li>
             <li class="list-item-inline"><a class="link" href="/">Twitter</a></li>
+            <li class="list-item-inline"><a class="link" href="https://leetcode.com/Anand_Q/">Leetcode</a></li>
         </ul>
     </footer>
 
