--- a/projects.html
+++ b/projects.html
@@ -26,12 +26,21 @@
         </ul>
     </nav>
     <header class="hero">
+        <img src="" alt="">
         <h1 class="hero-heading">See
             <span class="hero-inventer">
                    Project code
                 </span>
         </h1>
     </header>
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>Palindrome Birthday</h1>
+            <p>This website will tell you either your birthday is a palindrome or by how much day you miss the palindrome birthday.</p>
+            <a href="https://palindrome-birhtday.netlify.app/" class="link link-primary">Live Project</a>
+            <a href="https://github.com/anank0805kr/is-your-birthday-palindrome/tree/main" class="link link-secondary">Source code</a>
+        </div>
+    </section>
     <section class="section">
         <div class="container container-center">
             <h1>Learn Triangle</h1>
