--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Palindrome Birthday</h1>
+            <h5>September,2022</h5>
             <p>This website will tell you either your birthday is a palindrome or by how much day you miss the palindrome birthday.</p>
             <a href="https://palindrome-birhtday.netlify.app/" class="link link-primary">Live Project</a>
             <a href="https://github.com/anank0805kr/is-your-birthday-palindrome/tree/main" class="link link-secondary">Source code</a>
@@ -44,6 +45,7 @@
     <section class="section">
         <div class="container container-center">
             <h1>Learn Triangle</h1>
+            <h5>September,2022</h5>
             <p>In this site, you can check you triangle knowlegde </p>
             <a href="https://learn-triangle-s.netlify.app/" class="link link-primary">Live Project</a>
             <a href="https://github.com/anank0805kr/learn-triangles" class="link link-secondary">Source code</a>
@@ -52,6 +54,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>is-your-birthday-lucky</h1>
+            <h5>September,2022</h5>
             <p>A website to tell is your birthday lucky</p>
             <a href="https://is-your-birthday-a-luckyone.netlify.app/" class="link link-primary">Live Project</a>
             <a href="https://github.com/anank0805kr/is-your-birthday-lucky" class="link link-secondary">Source code</a>
@@ -60,6 +63,7 @@
     <section class="section">
         <div class="container container-center">
             <h1>MyGood_books</h1>
+            <h5>September,2022</h5>
             <p>Do you read books? You would find some good recommendations for all the genre. Made using ReactJS with love</p>
             <a href="https://csb-z6rtu3.netlify.app/" class="link link-primary">Live Project</a>
             <a href="https://github.com/anank0805kr/gookbooks" class="link link-secondary">Source code</a>
@@ -68,6 +72,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Cash Register Manager</h1>
+            <h5>September,2022</h5>
             <p>A cash register manager which helps the user by telling how can he/she return the change to the customer with minimum number of notes.</p>
             <a href="https://cash-register-m-anager.netlify.app/" class="link link-primary">Live Project</a>
             <a href="https://github.com/anank0805kr/cash-register-manager" class="link link-secondary">Source code</a>
@@ -76,6 +81,7 @@
     <section class="section">
         <div class="container container-center">
             <h1>Emoji_interpreter</h1>
+            <h5>September,2022</h5>
             <p>This is emoji interpreter app where we can easily find emoji </p>
             <a href="https://8uufsk.csb.app/" class="link link-primary">Live Project</a>
             <a href="https://github.com/anank0805kr/Emoji_interpreter" class="link link-secondary">Source code</a>
@@ -84,6 +90,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>yoda speak</h1>
+            <h5>September,2022</h5>
             <p>Convert from English to Yoda speak. Yoda often orders sentences as Object-Subject-Verb, split verbs, switches entire phrases and sometimes uses sentences that are different from his normal syntax!</p>
             <a href="https://english-to-yoda-speak.netlify.app/" class="link link-primary">Live Project</a>
             <a href="https://github.com/anank0805kr/Yoda_speak" class="link link-secondary">Source code</a>
@@ -92,6 +99,7 @@
     <section class="section">
         <div class="container container-center">
             <h1>minionese</h1>
+            <h5>September,2022</h5>
             <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
             <a href="https://bananatalk-speak.netlify.app/" class="link link-primary">Live Project</a>
             <a href="https://github.com/anank0805kr/Banana-talk" class="link link-secondary">Source code</a>
@@ -100,6 +108,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>How well do you know me?</h1>
+            <h5>September,2022</h5>
             <p>A CLI app built with nodeJS. You can send this to your friends and find out who really knows You</p>
             <a href="https://replit.com/@anand9123kr/cliapp#index.js" class="link link-primary">Live Project</a>
             <a href="https://github.com/anank0805kr/CLI_app1" class="link link-secondary">Source code</a>
@@ -108,6 +117,7 @@
     <section class="section">
         <div class="container container-center">
             <h1>Are you an anime fan ?</h1>
+            <h5>September,2022</h5>
             <p>Do you know anime? Let's play a quiz and see.</p>
             <a href="https://replit.com/@anand9123kr/CulturedGlassInstructionset#index.js" class="link link-primary">Live Project</a>
             <a href="https://github.com/anank0805kr/CLIapp2" class="link link-secondary">Source code</a>
