--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,15 @@
                 </span>
         </h1>
     </header>
+    <section class="section">
+        <div class="container container-center">
+            <h1>Profit loss in stock</h1>
+            <h5>September,2022</h5>
+            <p>This site is useful for finding profit and loss of your stocks </p>
+            <a href="https://profit-or-loss-in-stock.netlify.app/" class="link link-primary">Live Project</a>
+            <a href="hhttps://github.com/anank0805kr/Profit-or-loss" class="link link-secondary">Source code</a>
+        </div>
+    </section>
     <section class="section ow">
         <div class="container container-center">
             <h1>Palindrome Birthday</h1>
