--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
             <h5>September,2022</h5>
             <p>This site is useful for finding profit and loss of your stocks </p>
             <a href="https://profit-or-loss-in-stock.netlify.app/" class="link link-primary">Live Project</a>
-            <a href="hhttps://github.com/anank0805kr/Profit-or-loss" class="link link-secondary">Source code</a>
+            <a href="https://github.com/anank0805kr/Profit-or-loss" class="link link-secondary">Source code</a>
         </div>
     </section>
     <section class="section ow">
