--- a/blog1.html
+++ b/blog1.html
@@ -26,21 +26,47 @@
     </nav>
     <section class="section">
         <div class="container container-center">
-            <h1>This is dommy blog</h1>
-            <p>Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with
-                'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'. It is said that song composers of the past used dummy texts as lyrics when writing melodies in order to have
-                a 'ready-made' text to sing with the melody. Dummy texts have been in use by typesetters since the 16th century.</p>
-            <h1>The usefulness of nonsensical content</h1>
-            <p>Dummy text is also used to demonstrate the appearance of different typefaces and layouts, and in general the content of dummy text is nonsensical. Due to its widespread use as filler text for layouts, non-readability is of great importance:
-                human perception is tuned to recognize certain patterns and repetitions in texts. If the distribution of letters and 'words' is random, the reader will not be distracted from making a neutral judgement on the visual impact and readability
-                of the typefaces (typography), or the distribution of text on the page (layout or type area). For this reason, dummy text usually consists of a more or less random series of words or syllables. This prevents repetitive patterns from impairing
-                the overall visual impression and facilitates the comparison of different typefaces. Furthermore, it is advantageous when the dummy text is relatively realistic so that the layout impression of the final publication is not compromised.</p>
-            <h1>Incomprehensibility or readability?</h1>
-            <h3>That is the question.</h3>
-            <p>The most well-known dummy text is the 'Lorem Ipsum', which is said to have originated in the 16th century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to 'proper' Latin. It contains a series of real Latin
-                words. This ancient dummy text is also incomprehensible, but it imitates the rhythm of most European languages in Latin script. The advantage of its Latin origin and the relative meaninglessness of Lorum Ipsum is that the text does not
-                attract attention to itself or distract the viewer's attention from the layout.</p>
+            <h2>Why Space Tourism kinda Sucks</h2>
+            <p>Recently, Space Tourism is becoming a new brand for progress in financial profit of space organization link NASA, SpaceX and many more. Though space tourism isn’t brand new, the race to progress commercial space travel has moved along vastly
+                in the past year.</p>
+            <h2>What is Space Tourism?</h2>
+            <p> Tourism is human space travel for recreational or leisure purposes. So the fundamental purpose is for human pleasure, as all tourism is. While there are some broader definitions of space tourism, such as watching rocket launches or stargazing,</p>
+
+            <h2>Does commercial space travel exist today?</h2>
+            <p>The answer to this question is yes. we do have commercial Space travel in current world.commercial space travel is extremely exclusive, and this shows no signs of changing in the near future. In recent year, we have many company like Blue
+                origin , SpaceX and Virgin Galatic doing this successfullylaunching suborbital spaceflights with tourist passengers from their spaceports. we’ll be focusing on commercial space travel in this article, as it has the most far-reaching consequences.
+                <br>
+                <br> Below, you will find the detail of the company mention in the blog.
+            </p>
+            <h2>Virgin Galactic</h2>
+            <p>Created by Virgin’s Richard Branson, Virgin Galactic was founded in 2004. On July 11th 2021, Branson flew up to space with a crew of 2 pilots and 3 other passengers, becoming the first space tourist<br><br>The website outlines that Virgin
+                Galactic’s mission is to “open space to everybody” and says, “until now, ordinary citizens haven’t had the opportunity to experience space for themselves”.</p>
+            <h2>SpaceX</h2>
+            <p>Space X, short for Space Exploration Technologies Corporation, is a company created by Elon Musk, founder of Tesla.However, it’s worth noting that Space X is more focused on longer orbital flights, which are more difficult to carry out.
+                <br> <br>The website of Space X is definitely more detailed and contains more ambitious plans for the future of space travel. While they discuss private space travel for the purpose of leisure: “Fly over your hometown, famous landmarks
+                and other places meaningful to you”, they also talk about Earth-to-Earth transportation via space, the habitability of the moon, and plans to create a human colony on Mars.
+            </p>
+            <h2>Advantage of space tourism</h2>
+            <p>The experience of observing the Earth from space has a name: the Overview Effect. Essentially, this is a cognitive change of consciousness, where astronauts experience a new sense of obligation and responsibility to protect planet Earth. If
+                this truly means that everyone who visits space will want to protect the planet, then perhaps space tourism could be beneficial for human compassion.<br>Another big perk of space travel for passengers is the experience of microgravity,
+                where they will be able to feel weightless on the spacecraft for a few minutes. This may not change their perspective on Earth, but it’ll certainly give a feeling of euphoria.</p>
+            <h2>Scientific research</h2>
+            <p>There are a few scientific benefits of space tourism, though the most recent flights were perhaps not long enough to offer too much insight. When, in the future, we see longer space flights, we’ll have the opportunity to study long-term physiological
+                changes in humans as a result of being in space. <br>However, the truth is, space tourism has a different goal from other kinds of space travel. There’s no doubt that important scientific research could be carried out by scientists and
+                astronauts at the International Space Station, the moon, or even on another planet</p>
+            <h2>Disadvantage of space Tourism</h2>
+            <p>Of course, it’s not all exciting news. There are some pretty huge disadvantages of space tourism that we’re going to look at in more detail.</p>
+            <h2>The environmental cost to the planet</h2>
+            <p>The huge environmental cost of space tourism. This is one of the biggest concerns that people have about the prospect of regular commercial space travel, and rightly so. Below we discuss some of the biggest environmental concerns.</p>
+            <h2>Depleting ozone layer</h2>
+            <p>There are several ways space tourism can contribute to a depleting ozone layer. CO2 emissions and soot trap heat in the atmosphere and rockets emit up to 10 times more nitrogen oxides than the largest thermal power plant in the UK. Passengers
+                generally create between 50 and 100 times more CO2 emissions than a passenger on a long aeroplane flight.<br> A depleted ozone layer basically means that greenhouse gases can heat up the Earth more easily, and this causes global warming.
+                To improve your understanding of this process, you can check out our greenhouse gases blog post, and to consider the end result, you can read our climate change guide.</p>
+            <h2>Final thought - Is it worth it ?</h2>
+            <p>A depleted ozone layer basically means that greenhouse gases can heat up the Earth more easily, and this causes global warming. To improve your understanding of this process, you can check out our greenhouse gases blog post, and to consider
+                the end result, you can read our climate change guide.</p>
         </div>
+
     </section>
     <footer class="footer">
         <div class="footer-header">
