--- a/blog2.html
+++ b/blog2.html
@@ -26,20 +26,36 @@
     </nav>
     <section class="section">
         <div class="container container-center">
-            <h1>This is dommy blog</h1>
-            <p>Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with
-                'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'. It is said that song composers of the past used dummy texts as lyrics when writing melodies in order to have
-                a 'ready-made' text to sing with the melody. Dummy texts have been in use by typesetters since the 16th century.</p>
-            <h1>The usefulness of nonsensical content</h1>
-            <p>Dummy text is also used to demonstrate the appearance of different typefaces and layouts, and in general the content of dummy text is nonsensical. Due to its widespread use as filler text for layouts, non-readability is of great importance:
-                human perception is tuned to recognize certain patterns and repetitions in texts. If the distribution of letters and 'words' is random, the reader will not be distracted from making a neutral judgement on the visual impact and readability
-                of the typefaces (typography), or the distribution of text on the page (layout or type area). For this reason, dummy text usually consists of a more or less random series of words or syllables. This prevents repetitive patterns from impairing
-                the overall visual impression and facilitates the comparison of different typefaces. Furthermore, it is advantageous when the dummy text is relatively realistic so that the layout impression of the final publication is not compromised.</p>
-            <h1>Incomprehensibility or readability?</h1>
-            <h3>That is the question.</h3>
-            <p>The most well-known dummy text is the 'Lorem Ipsum', which is said to have originated in the 16th century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to 'proper' Latin. It contains a series of real Latin
-                words. This ancient dummy text is also incomprehensible, but it imitates the rhythm of most European languages in Latin script. The advantage of its Latin origin and the relative meaninglessness of Lorum Ipsum is that the text does not
-                attract attention to itself or distract the viewer's attention from the layout.</p>
+            <h1>How to get started with Competitive Programming?</h1>
+            <br><br>
+            <h2>What is Competitive Programming?</h2>
+            <p>Competitive programming is a programming sport involving many participants from different region to compete with each other to achieve better result in programming. It helps in enhancing one's mind and develop analyticla and thinking skills.
+                It is more common now then ever before. Programming is more common now than ever before. There is currently an active, now every week some online contest is happening for Competitive programming
+            </p>
+            <h2>Where to Start with Competitive programming</h2>
+            <p>With so many online sites and resources it’s very natural that one will be confused. So, to make things easier I will be going through some of the most popular sites for competitive programming and mention their specialities so that you can
+                decide yourself which one suits you the best.</p>
+            <ul>
+                <li><a href="/">SPOJ</a></li>
+                <li><a href="/">CODEFORCES</a></li>
+                <li><a href="/">CODECHEF</a></li>
+                <li><a href="/">HAKERRANK</a></li>
+
+            </ul>
+            <h1>Mistake That Beginners make</h1>
+            <h2>Getting Demotivated Easily</h2>
+            <p>In the beginning it is possible that you spend a complete day on a problem and still not be able to solve it. You may lose confidence, but think this way, every time you are not able to solve a problem and check the solution you learn something
+                new. Next time you will be able to solve the question that requires that concept yourself.</p>
+            <h2>Procrastination</h2>
+            <p>A habit that a lot of programmers have. Think of the regret you will have when you see a question in a contest that requires a concept which you have been procrastinating to learn. So it’s always better to learn something that you have been
+                planning to, as soon as possible and not delay it for long.</p>
+            <h2>Not Challenging yourself</h2>
+            <p>Whenever you read a new algorithm or an editorial it’s very important that you implement it yourself. ‘You don’t know an algorithm unless you can code it yourself ’. If you don’t implement it yourself you will soon forget it. Try to practice
+                2–3 questions from that topic.</p>
+            <br>
+            <br>
+            <p>At the end i would like to say that competitive programming is just like a sport, as in every sport some people may like it, some may not, some may find it difficult to play with but as in every sport it is, if you wish to become good in it,
+                practice and sheer practice is the the only key. That’s all you need to know for a start, I hope you enjoyed this article and will find it useful. Stay tuned for some more amazing content.</p>
         </div>
     </section>
     <footer class="footer">
