--- a/blogs.html
+++ b/blogs.html
@@ -26,19 +26,19 @@
     </nav>
     <section class="section">
         <div class="container container-center">
-            <h1>dummy blog one</h1>
-            <p>The most well-known dummy text is the 'Lorem Ipsum', which is said to have originated in the 16th century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to 'proper' Latin. It contains a series of real Latin
-                words.
-            </p>
+            <h2>Why Space Tourism Kinda Suck</h2>
+            <p>Recently, Space Tourism is becoming a new brand for progress in financial profit of space organization link NASA, SpaceX and many more. Though space tourism isn’t brand new, the race to progress commercial space travel has moved along vastly
+                in the past year.</p>
             <a href="/blog1.html" class="link link-primary">Read more</a>
     </section>
     </div>
     <section class="section">
         <div class="container container-center">
-            <h1>second dummy blog</h1>
-            <p>Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with
-                'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.</p>
-            <a href="/blog1.html" class="link link-primary">Read more</a>
+            <h1>How to get started with competitive programming</h1>
+            <p>Competitive programming is a programming sport involving many participants from different region to compete with each other to achieve better result in programming. It helps in enhancing one's mind and develop analyticla and thinking skills.
+                It is more common now then ever before. Programming is more common now than ever before. There is currently an active, now every week some online contest is happening for Competitive programming
+            </p>
+            <a href="/blog2.html" class="link link-primary">Read more</a>
         </div>
     </section>
     <footer class="footer">
