--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,15 @@
             <h1>Weather App</h1>
             <h5>November,2022</h5>
             <p>It will tell you the temperation and season of any city of the world </p>
+            <a href="https://mishop-store.netlify.app/" class="link link-primary">Live Project</a>
+            <a href="https://github.com/anand0805" class="link link-secondary">Source code</a>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container container-center">
+            <h1>Weather App</h1>
+            <h5>November,2022</h5>
+            <p>It will tell you the temperation and season of any city of the world </p>
             <a href="https://weather1-app-deployed.netlify.app/" class="link link-primary">Live Project</a>
             <a href="https://github.com/anand0805/weather_app" class="link link-secondary">Source code</a>
         </div>
