--- a/projects.html
+++ b/projects.html
@@ -35,9 +35,9 @@
     </header>
     <section class="section">
         <div class="container container-center">
-            <h1>Weather App</h1>
+            <h1>ReactJs CloneMiStore</h1>
             <h5>November,2022</h5>
-            <p>It will tell you the temperation and season of any city of the world </p>
+            <p>It is a clone of mi store e-commerce site using reactJs </p>
             <a href="https://mishop-store.netlify.app/" class="link link-primary">Live Project</a>
             <a href="https://github.com/anand0805" class="link link-secondary">Source code</a>
         </div>
